 * Add isolated flush timer to CommitLogMetrics and ensure writes correspond to single WaitingOnCommit data points (CASSANDRA-16701)
 * Add a system property to set hostId if not yet initialized (CASSANDRA-14582)
 * GossiperTest.testHasVersion3Nodes didn't take into account trunk version changes, fixed to rely on latest version (CASSANDRA-16651)
Merged from 4.0:
 * Delay auth setup until after gossip has settled to avoid unavailables on startup (CASSANDRA-16783)
 * org.apache.cassandra.db.rows.ArrayCell#unsharedHeapSizeExcludingData includes data twice (CASSANDRA-16900)
 * Fix clustering order logic in CREATE MATERIALIZED VIEW (CASSANDRA-16898)
 * Tolerate missing DNS entry when completing a host replacement (CASSANDRA-16873)
 * Harden PrunableArrayQueue against Pruner implementations that might throw exceptions (CASSANDRA-16866) 
 * Move RepairedDataInfo to the execution controller rather than the ReadCommand to avoid unintended sharing (CASSANDRA-16721)
 * Bump zstd-jni version to 1.5.0-4 (CASSANDRA-16884)
 * Remove assumption that all urgent messages are small (CASSANDRA-16877)
 * ArrayClustering.unsharedHeapSize does not include the data so undercounts the heap size (CASSANDRA-16845)
 * Improve help, doc and error messages about sstabledump -k and -x arguments (CASSANDRA-16818)
 * Add repaired/unrepaired bytes back to nodetool (CASSANDRA-15282)
 * Upgrade lz4-java to 1.8.0 to add RH6 support back (CASSANDRA-16753)
 * Improve DiagnosticEventService.publish(event) logging message of events (CASSANDRA-16749)
 * Cleanup dependency scopes (CASSANDRA-16704)
 * Make JmxHistogram#getRecentValues() and JmxTimer#getRecentValues() thread-safe (CASSANDRA-16707)
Merged from 3.11:
 * Validate SASI tokenizer options before adding index to schema (CASSANDRA-15135)
 * Fixup scrub output when no data post-scrub and clear up old use of row, which really means partition (CASSANDRA-16835)
 * Reduce thread contention in CommitLogSegment and HintsBuffer (CASSANDRA-16072)